@startuml ERD
skinparam linetype ortho

' left to right direction
' top to bottom direction

' entity

' direct communication purposes
entity chatrooms {
    * chatroom_id : string
    --
    extend_info : string
    * gmt_create : date
    * gmt_modified : date
}

entity chats {
    * id : string
    --
    * chatroom_id : string <<FK>>
    * user_id : string <<FK>>
    * message : string
    * is_deleted : bool
    * is_edited : bool
    * gmt_create : date
    * gmt_modified : date
}

' for transaction purposes
entity interest_levels {
    * id : string
    --
    * level_name : string
    * gmt_create : date
    * gmt_modified : date
}

entity item_categories {
    * id : string
    --
    * category_name : string
    * gmt_create : date
    * gmt_modified : date
}

entity hobbies {
    * id : string
    --
    * hobby_name : string
    * gmt_create : date
    * gmt_modified : date
}

entity user_roles {
    * id : string
    --
    * role_name : string
    * gmt_create : date
    * gmt_modified : date
}

entity capabilities {
    * id : string
    --
    * capability_name : string
    * gmt_create : date
    * gmt_modified : date
}

entity user_capabilities {
    * user_id : string <<FK>>
    * capability_id : string <<FK>>
    --
    * is_active : boolean
    * gmt_create : date
    * gmt_modified : date
}

entity users {
    * id : string  
    --
    * role_id : string <<FK>>
    * email : string <<UNIQUE>>
    * phone_number : string <<UNIQUE>>
    * username : string
      profile_picture : string
    * is_deleted: boolean
    * is_active : boolean
    * password : string
    * gmt_create : date
    * gmt_modified : date
}

entity items {
    * id : string 
    --
    * item_name : string
    * item_price : long
      item_images : string
    * item_description : long_text
    * item_quantity : int
    * merchant_id : string <<FK>>
    * category_id : string <<FK>>
    * hobby_id : string <<FK>>
    * merchant_level_id : string <<FK>>
    * is_deleted : boolean
    * gmt_create : date
    * gmt_modified : date
}
entity reviews {
    * id : string
    --
    * star : int
    * item_id : string <<FK>>
    * user_id : string <<FK>>
      interest_level : string <<FK>>
      description : longtext
      review_image : blob
    * gmt_create : date
    * gmt_modified : date
}

entity history_items{
    * id : string 
    --
    * item_id : string <<FK>>
    * item_name : string
    * item_price : long
    * item_images : string
    * item_description : long_text
    * merchant_id : string <<FK>>
    * category_id : string <<FK>>
    * hobby_id : string <<FK>>
    * merchant_level_id : string <<FK>>
    * need_review : boolean
    * gmt_create : date
    * gmt_modified : date
}

entity transaction {
    * id : string
    --
    * user_id : string <<FK>>
    * payment_type : string
    * status : string
    * gmt_create : date
    * gmt_modified : date
}

entity transaction_details {
    * id : string
    --
    * transaction_id : string <<FK>>
    * history_item_id : string <<FK>>
    * quantity : int
    * gmt_create : date
    * gmt_modified : date
}

entity carts {
    * id : string
    --
    * user_id : string <<FK>>
    * gmt_create : date
    * gmt_modified : date
}

entity cart_details {
    * id : string
    --
    * cart_id : string <<FK>>
    * item_id : string <<FK>>
    * quantity : int
    * gmt_create : date
    * gmt_modified : date
}

' for discussion purposes
entity posts {
    * id : string
    --
    * user_id : string <<FK>>
    * title : string
      content : longtext
      images : string
      tags : string
    * is_deleted : boolean
    * gmt_create : date
    * gmt_modified : date
}

entity comments {
    * id : string
    --
    * user_id : string <<FK>>
      comment_id : string <<FK>>
      post_id : string <<FK>>
    * content : longtext
    * gmt_create : date
    * gmt_modified : date
}

entity comment_upvotes {
    * user_id : string <<FK>>
    * comment_id : string <<FK>>
    --
    * value : int
    * gmt_create : date
    * gmt_modified : date
}

entity post_upvotes {
    * user_id : string <<FK>>
    * post_id : string <<FK>>
    --
    * value : int
    * gmt_create : date
    * gmt_modified : date
}

entity post_reports {
    * id : string
    --
    * user_id : string <<FK>>
    * post_id : string <<FK>>
      report_desc : longtext
    * gmt_create : date
    * gmt_modified : date
}

entity comment_reports {
    * id : string
    --
    * user_id : string <<FK>>
    * comment_id : string <<FK>>
      report_desc : longtext
    * gmt_create : date
    * gmt_modified : date
}

' table for backend purpose
entity sessions{
    * id : string
    --
    * user_id : string <<FK>>
    * session_dt : date
    * is_active : boolean
    * is_remembered : boolean
    * gmt_create : date
    * gmt_modified : date
}

' entity activities {
'     * id : string
'     --
'     * activity_name : string
'     * point : int
'     * gmt_create : date
'     * gmt_modified : date
' }

' entity user_activities {
'     * id : string
'     --
'     * user_id : string <<FK>>
'     * item_id : string <<FK>>
'     * is_active : boolean
'     * gmt_create : date
'     * gmt_modified : date
' }

entity otps {
    * otp_id : string
    --
    * otp : string
    * otp_dt : date
    * email : string <<FK>>
    * type_id : string <<FK>>
    * is_active : boolean 
    * gmt_create : date
    * gmt_modified : date
}

entity otp_types {
    * type_id : string
    --
    * otp_type : string
    * gmt_create : date
    * gmt_modified : date
}

entity clients {
    * client_id : string
    --
    * client_name : string
    * client_secret : string
    * gmt_create : date
    * gmt_modified : date
}

entity contents {
    * content_name : string
    --
    * content : longtext
    * gmt_create : date
    * gmt_modified : date
}

entity wishlists {
    * item_id : string <<FK>>
    * user_id : string <<FK>>
    --
    * gmt_create : date
    * gmt_modified : date
}

entity crowds {
    * crowd_id : string
    --
    * is_active : boolean
    * gmt_create : date
    * gmt_modified : date
}

entity crowd_rules {
    * rule_id : string
    --
    * crowd_id : string <<FK>>
    * rule_type : string
    * rule_value : string
    * gmt_create : date
    * gmt_modified : date
}

entity user_crowds {
    * crowd_id : string <<FK>>
    * user_id : string <<FK>>
    --
    * gmt_create : date
    * gmt_modified : date
}

entity item_crowds {
    * crowd_id : string <<FK>>
    * item_id : string <<FK>>
    --
    * gmt_create : date
    * gmt_modified : date
}

entity dictionary {
    * dictionary_id : string <<PK>>
    --
    * dictionary_type : string
    * dictionary_key : string
    * dictionary_value : string
    * gmt_create : date
    * gmt_modified : date
}

entity images {
    * image_id : string <<PK>>
    --
    * image_name : string
    * image_ext : string
    * image : blob
    * gmt_create : date
    * gmt_modified : date
}

' relation
' for transaction purposes
interest_levels }o-|| items
item_categories }o-|| items
items ||-o{ hobbies

' user_roles }o--|| users
users ||-o{ user_roles

users }o--|| transaction
transaction }o-|| transaction_details
history_items }o-|| transaction_details

' carts
users }o--|| carts
carts }o--|| cart_details
cart_details ||--o{ items

items }|---|| reviews
reviews |o--o{ interest_levels
items ||--o{ users
reviews ||--o{ users

' history items
' history_items ||--o{ items
' history_items ||--o{ hobbies
' history_items ||--o{ item_categories
' history_items ||--o{ interest_levels

items }o--|| history_items
hobbies }o--|| history_items
item_categories }o--|| history_items
interest_levels }o--|| history_items

' for discussion purposes
comments }o--|| comment_upvotes
comment_upvotes ||--o{ users
posts }o--|| post_upvotes
' post_upvotes ||--o{ posts
post_upvotes ||--o{ users

posts }o--|| comments
comments ||-o{ comments

' direct communication purposes
users }o--o| chats
' chats |o--o{ users
chatrooms }o-o| chats
' chats |o-o{ chatrooms


' user capability
' users }o--||  user_capabilities
user_capabilities ||--o{ users
capabilities }o--|| user_capabilities

' table for backend purpose
users }o-|| sessions
' users }o-|| user_activities
' items }o-|| user_activities
' user_activities ||-o{ users
' user_activities ||-o{ items
' user_activities ||--o{ activities

' wishlist
users }o--|| wishlists
' items }o-|| wishlists
' wishlists ||-o{ users
wishlists ||-o{ items

' report
' posts }o--|| post_reports
' comments }o--|| comment_reports
comments ||-o{ users
posts ||-o{ users
comment_reports ||--o{ comments
post_reports ||-o{ posts

comment_reports ||--o{ users
post_reports ||--o{ users

otps }o--|| users
otp_types ||--o{ otps

crowds ||-|{ crowd_rules
crowds ||-|{ user_crowds
' crowds ||-|{ item_crowds
' user_crowds }o-|| crowds
item_crowds }o-|| crowds

user_crowds }o-|| users
item_crowds }o-|| items
' items ||-o{ item_crowds

@enduml
